--- a/buy-and-sell-frontend/src/app/listing-detail-page/listing-detail-page.component.html
+++ b/buy-and-sell-frontend/src/app/listing-detail-page/listing-detail-page.component.html
@@ -1,1 +1,5 @@
-<p>listing-detail-page works!</p>
+<div class="content-box">
+  <a routeLink="/listings">
+    <button>Back</button>
+  </a>
+</div>
