--- a/buy-and-sell-frontend/src/app/listing-detail-page/listing-detail-page.component.html
+++ b/buy-and-sell-frontend/src/app/listing-detail-page/listing-detail-page.component.html
@@ -2,10 +2,10 @@
   <a routeLink="/listings">
     <button>Back</button>
   </a>
-  <h2>{{ listing.name }}</h2>
-  <p>{{ listing.description }}</p>
-  <p>${{ listing.price }}</p>
-  <a routerLink="/contact/{{ listing.id }}">
+  <h2>{{ listing?.name }}</h2>
+  <p>{{ listing?.description }}</p>
+  <p>${{ listing?.price }}</p>
+  <a routerLink="/contact/{{ listing?.id }}">
     <button>Contact Seller</button>
   </a>
 </div>
