Fix typo in routerLink

--- a/buy-and-sell-frontend/src/app/listing-detail-page/listing-detail-page.component.html
+++ b/buy-and-sell-frontend/src/app/listing-detail-page/listing-detail-page.component.html
@@ -1,5 +1,5 @@
 <div class="content-box">
-  <a routeLink="/listings">
+  <a routerLink="/listings">
     <button>Back</button>
   </a>
   <h2>{{ listing?.name }}</h2>
