--- a/buy-and-sell-frontend/src/app/listing-data-form/listing-data-form.component.html
+++ b/buy-and-sell-frontend/src/app/listing-data-form/listing-data-form.component.html
@@ -1,1 +1,18 @@
-<p>listing-data-form works!</p>
+<form (ngSubmit)="onSubmit()">
+  <div>
+    <label for="name">Name:
+      <input id="name" name="name" type="text" [(ngModel)]="name" />
+    </label>
+  </div>
+  <div>
+    <label for="description">Item Description:
+      <input id="description" name="description" type="text" [(ngModel)]="description" />
+    </label>
+  </div>
+  <div>
+    <label for="price">Price:
+      <input id="price" name="price" type="text" [(ngModel)]="price" />
+    </label>
+  </div>
+  <button type="submit">Create Listing</button>
+</form>
