Make button on listing data form as input

--- a/buy-and-sell-frontend/src/app/listing-data-form/listing-data-form.component.html
+++ b/buy-and-sell-frontend/src/app/listing-data-form/listing-data-form.component.html
@@ -14,5 +14,5 @@
       <input id="price" name="price" type="text" [(ngModel)]="price" />
     </label>
   </div>
-  <button type="submit">Create Listing</button>
+  <button type="submit">{{ buttonText }}</button>
 </form>
