--- a/buy-and-sell-frontend/src/app/edit-listing-page/edit-listing-page.component.html
+++ b/buy-and-sell-frontend/src/app/edit-listing-page/edit-listing-page.component.html
@@ -1,4 +1,4 @@
 <div class="content-box">
   <h2>Edit Listing</h2>
-  <app-listing-data-form></app-listing-data-form>
+  <app-listing-data-form buttonText="Save Changes"></app-listing-data-form>
 </div>
