--- a/buy-and-sell-frontend/src/app/listing-data-form/listing-data-form.component.html
+++ b/buy-and-sell-frontend/src/app/listing-data-form/listing-data-form.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="onSubmit()">
+<form (ngSubmit)="onButtonClicked()">
   <div>
     <label for="name">Name:
       <input id="name" name="name" type="text" [(ngModel)]="name" />
