--- a/buy-and-sell-frontend/src/app/new-listing-page/new-listing-page.component.html
+++ b/buy-and-sell-frontend/src/app/new-listing-page/new-listing-page.component.html
@@ -1,21 +1,6 @@
 <div class="content-box">
   <h2>Create New Listing</h2>
-  <form (ngSubmit)="onSubmit()">
-    <div>
-      <label for="name">Name:
-        <input id="name" name="name" type="text" [(ngModel)]="name" />
-      </label>
-    </div>
-    <div>
-      <label for="description">Item Description:
-        <input id="description" name="description" type="text" [(ngModel)]="description" />
-      </label>
-    </div>
-    <div>
-      <label for="price">Price:
-        <input id="price" name="price" type="text" [(ngModel)]="price" />
-      </label>
-    </div>
-    <button type="submit">Create Listing</button>
-  </form>
+  <app-listing-data-form
+    buttonText="Create Listing"
+    (onSubmit)="onSubmit()" ></app-listing-data-form>
 </div>
