--- a/buy-and-sell-frontend/src/app/nav-bar/nav-bar.component.html
+++ b/buy-and-sell-frontend/src/app/nav-bar/nav-bar.component.html
@@ -1,1 +1,8 @@
-<p>nav-bar works!</p>
+<div id="top-bar">
+  <a routerLink="/listings">
+    <h1 id="app-heading">Buy And Sell</h1>
+  </a>
+  <a routerLink="/my-listings">
+    <button id="my-listings-button">My Listings</button>
+  </a>
+</div>
