Add views number to listing detail html page

--- a/buy-and-sell-frontend/src/app/listing-detail-page/listing-detail-page.component.html
+++ b/buy-and-sell-frontend/src/app/listing-detail-page/listing-detail-page.component.html
@@ -1,4 +1,5 @@
 <div class="content-box">
+  <p>This listing has been viewed {{ listing.views }} times</p>
   <a routerLink="/listings">
     <button>Back</button>
   </a>
