--- a/buy-and-sell-frontend/src/app/listing-detail-page/listing-detail-page.component.html
+++ b/buy-and-sell-frontend/src/app/listing-detail-page/listing-detail-page.component.html
@@ -1,4 +1,4 @@
-<div class="content-box">
+<div class="content-box" *ngIf="!isLoading">
   <p>This listing has been viewed {{ listing.views }} times</p>
   <a routerLink="/listings">
     <button>Back</button>
@@ -9,4 +9,7 @@
   <a routerLink="/contact/{{ listing?.id }}">
     <button>Contact Seller</button>
   </a>
+</div>
+<div class="content-box" *ngIf="isLoading">
+  <h3>Loading...</h3>
 </div>
