Add firebase to frontend

--- a/buy-and-sell-frontend/src/app/edit-listing-page/edit-listing-page.component.html
+++ b/buy-and-sell-frontend/src/app/edit-listing-page/edit-listing-page.component.html
@@ -5,7 +5,7 @@
     [currentName]="listing.name"
     [currentDescription]="listing.description"
     [currentPrice]="listing.price"
-    (onSubmit)="onSubmit($event)"></app-listing-data-form>
+    (onSubmit)="onSubmit($any($event))"></app-listing-data-form>
 </div>
 <div class="content-box" *ngIf="!listing">
   <h3>Loading...</h3>
